feat: macos mpv bridging